# checkbox-vqa

./: main.py  pyproject.toml
source_of_origin/dataset/checkbox/detection/: train.csv
source_of_origin/dataset/checkbox_with_text/detection/: train.csv
src/detection/: checkbox_attr_detection_test.py  checkbox_detection_test.py  checkbox_detection_train.py
src/extraction/: printed_text_extraction.py
src/recognition/: checkbox_state_recognition_test.py  checkbox_state_recognition_train.py
utils/: config.py  file_info.py  logger.py
